<resources>
    <string name="app_name">CST2335</string>

    <!--    First screen buttons-->
    <string name="button_text_guardian">The Guardian News</string>
    <string name="button_text_nasa_image">NASA image of the day</string>
    <string name="button_text_nasa_earth">NASA earth imagery</string>
    <string name="button_text_BBC">BBC news</string>

    <!--    Global -->
    <string name="other_activities">Other Activities</string>
    <string name="help">Help</string>

    <!--    Guardian News strings-->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="search">Search articles</string>
    <string name="saved">Saved articles</string>
    <string name="article_saved">Article saved</string>
    <string name="article_deleted">Article deleted</string>
    <string name="action_save">Save Article</string>
    <string name="action_delete">Delete Article</string>
    <string name="article_section">Section:</string>
    <string name="article_date">Web publication date:</string>
    <string name="article_url">URL:</string>
    <string name="article_delete_message">Are you sure you want to delete this article?</string>
    <string name="article_delete_yes">yes</string>
    <string name="article_delete_no">no</string>
    <string name="article_author">Author:</string>
    <string name="article_version">Version:</string>
    <string name="article_author_name">Sukhmandeep Singh Sandhu</string>
    <string name="article_help">1. Click on hamburger icon to open drawer.\n
2. Select \'Search article\' to search an article.\n
3. Type the title of an article and click on the search icon to get results.\n
4. Click on the articles list to view details or save it for later viewing.\n
5. You can view saved articles by clicking on the \'Saved Articles\'.</string>
    <string name="article_ok">OK</string>

    <string name="enter_article_title_to_search">Enter article title to search</string>
    <string name="title_detail">Article Details</string>

    <!--    NASA Image strings-->
    <string name="image_hint_search">Select date</string>
    <string name="image_button_search">Search for Image of the day</string>
    <string name="image_detail_title">Title</string>
    <string name="image_detail_explanation">Explanation</string>
    <string name="image_detail_date">Date</string>
    <string name="image_detail_url">URL</string>
    <string name="image_author_name">Daksh</string>
    <string name="image_okay">OKAY</string>
    <string name="image_help">- Select a date and press the button to get the title of image.\n
- Click on the title (list item) to view the image and description.\n
- You can save the image to gallery by pressing Save button for later viewing.\n
- Select Saved Images from drawer to show Saved images.</string>
    <string name="image_search_image">Search</string>
    <string name="image_saved_image">Saved Images</string>
    <string name="image_saved_success">Image saved successfully</string>
    <string name="image_delete_success">Image deleted successfully</string>
    <string name="image_save_img">Save</string>
    <string name="image_delete_img">Delete</string>
    <string name="image_toast_select_date">Please select a date to search</string>
    <!--    NASA Earth strings-->
    <string name="earth_image_search">Search Image</string>
    <string name="earth_image_fav">Favourites</string>
    <string name="earth_author_name">Neha</string>
    <string name="earth_author">Author:</string>
    <string name="earth_select_date">Select date</string>
    <string name="earth_author_version">Version:</string>
    <string name="earth_search">Search</string>
    <string name="earth_enter_lat">Enter latitude</string>
    <string name="earth_enter_lon">Enter longitude</string>
    <string name="earth_lat">Latitude</string>
    <string name="earth_lon">Longitude</string>
    <string name="earth_date">Date</string>
    <string name="earth_save">Save to Favourites</string>
    <string name="earth_delete">Delete from Favourites</string>
    <string name="earth_saved">Saved to favourites</string>
    <string name="earth_deleted">Deleted from favourites</string>
    <string name="earth_help">- On the first screen, enter latitude and longitude of location and press \'Search\' button to check availability of image, if the data is available for that location, result will be shown as date and time, tap on it to view detailed information.\n
- Click on save to save details to favourites.\n
- Open navigation drawer to view favourites.</string>
    <string name="earth_ok">OK</string>
    <string name="earth_error_data">Error getting data!</string>
    <string name="earth_error">Error: </string>

    <string name="earth_drawer_open">Open Drawer</string>
    <string name="earth_drawer_close">Close drawer</string>
    <!--    BBC News strings-->
    <string name="bbc_drawer_open">Open drawer</string>
    <string name="bbc_drawer_close">Close drawer</string>
    <string name="bbc_latest_news">Latest news</string>
    <string name="bbc_saved_news">Saved news</string>
    <string name="bbc_author_name">Manjot Kaur Dharni</string>
    <string name="bbc_button_save">Save</string>
    <string name="bbc_button_delete">Delete</string>
    <string name="bbc_snack_saved">News Saved</string>
    <string name="bbc_snack_deleted">News Deleted</string>
    <string name="bbc_toast_last_viewed">This is the last viewed article, press back to view a list of articles.</string>
    <string name="bbc_help">- Click on the top left corner \'Drawer\' icon to open navigation drawer.\n
- Select \'Latest news\' to view latest news.\n
- Select \'Saved news\' to view offline saved news.\n
- Click on news to view description and save or delete it offline.\n
- Click on other activities to view other modules.
    </string>
    <string name="bbc_got_it">Got it</string>
    <string name="bbc_text_desc">Description</string>
    <string name="bbc_text_pub_date">Published date</string>
    <string name="bbc_text_link">Link</string>
</resources>
