<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawerEarthMenuSearch"
            android:title="@string/earth_image_search" />
        <item
            android:id="@+id/drawerEarthMenuFav"
            android:title="@string/earth_image_fav" />
    </group>

    <item android:title="@string/other_activities">
        <menu>
            <item
                android:id="@+id/drawerMenuGuardian"
                android:title="@string/button_text_guardian" />
            <item
                android:id="@+id/drawerMenuNasaImage"
                android:title="@string/button_text_nasa_image" />
            <item
                android:id="@+id/drawerMenuBBCNews"
                android:title="@string/button_text_BBC" />
        </menu>
    </item>
</menu>